# pinn-demo

./: .gitignore  README.md  pinn-demo.ipynb  pyproject.toml
